# security-alert-bot

./: .env.sample  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  config.py  main.py  pyproject.toml  setup_logger.py  utils.py
bot/: __init__.py  discord_bot.py
conn/: http.py
db/: __init__.py  conn.py  notices.py  prepare.py
domain/: __init__.py  bot.py  datasource.py  manager.py
ds/: __init__.py  almalinux_ds.py  debian_dsa_ds.py  freebsd_ds.py  freebsd_ports_ds.py  rhsa_ds.py
fixtures/: __init__.py  patch_getaddrinfo.py
manager/: __init__.py  notices_manager.py
model/: __init__.py  entry.py
settings/: __init__.py  bot.py  db.py  ds.py  manager.py
