[project]
name = "sec-alert-bot"
version = "0.1.0"
description = "Security Advisory Discord Bot for multiple projects"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dateparser>=1.2.2",
    "discord-py>=2.6.4",
    "feedparser>=6.0.12",
    "html-to-markdown>=2.16.1",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]
