[project]
name = "sec-alert-bot"
version = "0.1.0"
description = "Security Advisory Discord Bot for multiple projects"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "dateparser>=1.3.0",
    "discord-py>=2.7.1",
    "feedparser>=6.0.12",
    "html-to-markdown>=2.28.2",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.6",
]
